# sengled-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: turn_on_all_devices.rs
sengled/: Cargo.toml
sengled-server/: Cargo.toml
sengled-server/src/: main.rs  routes.rs
sengled/examples/: turn_on_all_devices.rs
sengled/src/: device.rs  lib.rs
src/: device.rs  lib.rs
