[package]
name = "sengled-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
dashmap = "5.5.3"
sengled = { path = "../sengled" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.112"
serde_yaml = "0.9.30"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
