[package]
name = "sengled"
version = "0.1.0"
edition = "2021"
authors = ["voximity <me@zanderf.net>"]
description = "Tiny API wrapper over Sengled smart devices"
license = "MIT"

[dependencies]
chrono = "0.4.32"
regex = "1.10.3"
regex-macro = "0.2.0"
reqwest = { version = "0.11.23", features = ["json"] }
rumqttc = { version = "0.24", features = ["websocket"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
